<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Touch Wakeup Settings</string>
    <string name="gesture_wakeup">Touch wakeup</string>
    <string name="gestures">Gesture</string>
    <string name="gesture_double_click">Gesture:Double Click</string>
    <string name="gesture_c">Gesture:C</string>
    <string name="gesture_e">Gesture:e</string>
    <string name="gesture_W">Gesture:W</string>
    <string name="gesture_O">Gesture:O</string>
    <string name="gesture_M">Gesture:M</string>
    <string name="gesture_Z">Gesture:Z</string>
    <string name="gesture_V">Gesture:V</string>
    <string name="gesture_S">Gesture:S</string>
    <string name="gesture_up">Gesture:Slid to up</string>
    <string name="gesture_down">Gesture:Slid to down</string>
    <string name="gesture_left">Gesture:Slid to left</string>
    <string name="gesture_right">Gesture:Slid to right</string>
    <string name="mode">Mode</string>
    <string name="func_config">Functional configuration</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="mode_entries">
        <item>Wakeup</item>
        <item>Unlock</item>
        <!--
             <item>播放/暂停音乐</item>
        <item>上一首</item>
        <item>下一首</item>
        -->
        <item>Run App</item>
    </string-array>
    <string-array name="mode_values">
        <item>wakeup</item>
        <item>unlcok</item>
        <!--
             <item>play</item>
        <item>previous</item>
        <item>next</item>
        -->
        <item>run</item>
    </string-array>

</resources>