<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="parent" >

    <SwitchPreference
        android:key="gesture_wakeup"
        android:title="@string/gesture_wakeup" >
    </SwitchPreference>

    <PreferenceCategory
        android:key="gestures_group"
        android:title="@string/gestures" >
        <SwitchPreference
            android:key="gesture_double_click"
            android:title="@string/gesture_double_click" />
        <SwitchPreference
            android:key="gesture_c"
            android:title="@string/gesture_c" />
        <SwitchPreference
            android:key="gesture_e"
            android:title="@string/gesture_e" />
        <SwitchPreference
            android:key="gesture_W"
            android:title="@string/gesture_W" />
        <SwitchPreference
            android:key="gesture_O"
            android:title="@string/gesture_O" />
        <SwitchPreference
            android:key="gesture_M"
            android:title="@string/gesture_M" />
        <SwitchPreference
            android:key="gesture_Z"
            android:title="@string/gesture_Z" />
        <SwitchPreference
            android:key="gesture_V"
            android:title="@string/gesture_V" />
        <SwitchPreference
            android:key="gesture_S"
            android:title="@string/gesture_S" />
        <SwitchPreference
            android:key="gesture_up"
            android:title="@string/gesture_up" />
        <SwitchPreference
            android:key="gesture_down"
            android:title="@string/gesture_down" />
        <SwitchPreference
            android:key="gesture_left"
            android:title="@string/gesture_left" />
        <SwitchPreference
            android:key="gesture_right"
            android:title="@string/gesture_right" />
    </PreferenceCategory>

</PreferenceScreen>